--- a/svbtle/svbtle.css
+++ b/svbtle/svbtle.css
@@ -2,8 +2,8 @@
 
 body {
   font-family: 'Open Sans','Helvetica','Avenir','Arial',sans-serif;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 #wrapper {
@@ -74,11 +74,11 @@ hr {
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   border-bottom-style: solid;
-  border-bottom-width: 0px;
+  border-bottom-width: 0;
   border-left-style: solid;
-  border-left-width: 0px;
+  border-left-width: 0;
   border-right-style: solid;
-  border-right-width: 0px;
+  border-right-width: 0;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   border-top-style: solid;
@@ -105,14 +105,14 @@ code {
   border: 1px solid #d2d2d2;
   border-radius: 15px;
   background-color: #f8f8f8;
-  padding: 0px 5px;
+  padding: 0 5px;
   font-size: 13px;
   line-height: 16px;
 }
 
 pre code {
-  padding: 10px 0px;
-  border: 0px;
+  padding: 10px 0;
+  border: 0;
 }
 
 img {
